Fixed jumping nav

--- a/css/main.sass
+++ b/css/main.sass
@@ -31,7 +31,10 @@ html
   h1
     font-size: 3.2rem
     font-weight: 300
-    
+.nav-wrapper
+  height: 8rem
+#navigation
+  height: 8rem
 .navbar-fixed
   position: fixed
   z-index: 1
